azure/MOVE/ingress-identity-gw.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-gw
  namespace: camunda
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /identity
            backend:
              service:
                name: camunda-identity
                port:
                  number: 80
            pathType: Prefix
