azure/MOVE/ingress-keycloak-gw.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-gw
  namespace: camunda
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /auth
            backend:
              service:
                name: camunda-keycloak
                port:
                  number: 80
            pathType: Prefix
