azure/MOVE/ingress-operate-gw.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: operate-gw
  namespace: camunda
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /operate
            backend:
              service:
                name: camunda-operate
                port:
                  number: 80
            pathType: Prefix
