azure/MOVE/ingress-tasklist-gw.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasklist-gw
  namespace: camunda
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /tasklist
            backend:
              service:
                name: camunda-tasklist
                port:
                  number: 80
            pathType: Prefix
